<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.06"
                android:ems="10"
                android:hint="@string/add_a_comment"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.06"
                android:text="@string/share_on_facebook" />

            <ImageView
                android:id="@+id/share_facebook_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_to_share"
                app:srcCompat="@drawable/common_full_open_on_phone"
                android:layout_weight="0.97" />
        </LinearLayout>
</ScrollView>